layout improvements. Admin backend now fix green. Buttons with no-caps. Config menu tidier.  countdown visually aligns better with the frontpage

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -28,11 +28,11 @@ $warning   : #F2C037;
 // src/css/quasar.variables.scss
 
 $primary: #196cb0;
-$secondary: #b8124f;
+$secondary: #4283b8;
 $accent: #16a890;
 
 $dark: #1d1d1d;
-$dark-page: #121212;
+$dark-page: #181818;
 
 $positive: #16a864;
 $negative: #c2182c;
